--- a/imooc/index.html
+++ b/imooc/index.html
@@ -17,7 +17,7 @@
     <div class="bg"></div>
     <div class="p1_lantern">点击屏幕<br>开启好运2016</div>
     <div class="p1_imooc"></div>
-    <div class="p1_words">2016年慕课网新年特献</div>
+    <div class="p1_words">2016年新春快乐</div>
 </div>
 <div class="page" id="page2">
 	<div class="bg p2_bg_loading"></div>
